==> NifleySnifley/RocketTracker/RocketTracker-Sw/tracker_firmware/lib/comms/src/radio.cpp <==
#include "radio.h"
#include <stdint.h>
#include <stdio.h>
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include "freertos/event_groups.h"
#include "esp_system.h"
#include "esp_log.h"
#include "esp_types.h"
#include "esp_event.h"
#include "esp_err.h"
#define SPI_AQUIRE HAL_wait_spi(); spi_lock = true;
#define SPI_RELEASE spi_lock = false;

void RFM97_LoRa::reset() {
	// DONE: Platform code for GPIO reset
	gpio_set_level(rst, 0);
	vTaskDelay(10);
	gpio_set_level(rst, 1);
}

bool RFM97_LoRa::init() {
	// TODO: Platform code GPIO initialization
	HAL_gpioInit();

	// SPI Init
	ASSURE(HAL_spiInit(1000 * 1000));

	reset();

	// Make sure its the right chip and its connected properly...
	ASSURE(HAL_spiread(SX1276_REG_VERSION) == 0x12);

	// Sleep and then set into LoRa mode
	HAL_spiwrite(SX1276_REG_OPMODE, 0b00001000);
	vTaskDelay(10);
	HAL_spiwrite(SX1276_REG_OPMODE, 0b00001000 | SX1276_OPMODE_MASK_LORAMODE);
	setMode(SX1276_MODE_STDBY);

	// Set any neccesary registers to work properly
	configure();

	// Set frequency to 915mhz
	ASSURE(setFreq(915.0));

	// Set to the highest power setting available (20dBm with power amp)
	ASSURE(setPower(20, true));

	// Set bandwidth to 125kHz, the usual LoRa bandwidth 
	// Other options are 500, 250, 62.5, etc.
	ASSURE(setBandwidth(SX1276_BANDWIDTH_125KHZ));

	// Set spreading factor to 12 (4096 chirps per bit) for best decoding.
	ASSURE(setSpreadingFactor(7));

	// Set coding rate denominator to 5
	ASSURE(setCodingRate(5));

	setPreambleLen(8);

	// Set header mode to explicit
	setHeaderMode(false);

	// Enable CRC
	setCrcMode(true);

	// Syncword of 0x18
	setSyncWord(0x18);

	// Max gain
	setGain(SX1276_GAIN_MAX);

	// Set DIO0 to interrupt on RX done
	ASSURE(configDIO(0, SX1276_DIO0_RX_DONE));

	// Set overcurrent protection to 120mA
	setOCP(true, 15);

	state = RFM97_RadioState::STANDBY;

	intq = xQueueCreate(10, sizeof(int));
	xTaskCreate(radio_service, "radio_service", 1024 * 2, (void*)this, configMAX_PRIORITIES, NULL);

	return true;
}

void RFM97_LoRa::setISRA(void (*func)(void*)) {
	// TODO: Platform code
	// gpio_intr_enable(dio0);
	gpio_set_intr_type(dio0, GPIO_INTR_POSEDGE);
	gpio_install_isr_service(0);
	ESP_ERROR_CHECK(gpio_isr_handler_add(dio0, func, NULL));
}
