==> NifleySnifley/RocketTracker/RocketTracker-Sw/receiver_firmware/src/comms/radio.cpp <==
#include <hardware/spi.h>
#include <hardware/gpio.h>
#include "radio.h"
#include <stdint.h>
#include <stdio.h>
#include "pico/stdlib.h"
#include "pico/binary_info.h"
#include "hardware/sync.h"
#include "pinout.h"
#include "tusb.h"
#define SPI_AQUIRE wait_spi(); spi_lock = true;
#define SPI_RELEASE spi_lock = false;

void RFM97_LoRa::reset() {
	gpio_put(rst, 0);
	sleep_ms(10);
	gpio_put(rst, 1);
}

bool RFM97_LoRa::init() {
	gpio_init(dio0);
	gpio_init(rst);
	gpio_set_dir(dio0, GPIO_IN);
	gpio_set_dir(rst, GPIO_OUT);

	// SPI Init
	ASSURE(spiInit(1000 * 1000));

	dma_TX = dma_claim_unused_channel(true);
	dma_RX = dma_claim_unused_channel(true);

	// DMA Init
	dma_channel_config cfg = dma_channel_get_default_config(dma_TX);
	channel_config_set_transfer_data_size(&cfg, DMA_SIZE_8);
	channel_config_set_dreq(&cfg, spi_get_dreq(spi_inst, true));
	channel_config_set_write_increment(&cfg, false);
	dma_channel_configure(dma_TX, &cfg, &spi_get_hw(spi_inst)->dr, 0, 0, false);

	cfg = dma_channel_get_default_config(dma_RX);
	channel_config_set_transfer_data_size(&cfg, DMA_SIZE_8);
	channel_config_set_dreq(&cfg, spi_get_dreq(spi_inst, false));
	channel_config_set_read_increment(&cfg, false);
	dma_channel_configure(dma_RX, &cfg, 0, &spi_get_hw(spi_inst)->dr, 0, false);

	dma_channel_set_irq0_enabled(dma_RX, true);
	dma_channel_set_irq0_enabled(dma_TX, false);
	irq_set_enabled(DMA_IRQ_0, true);

	reset();

	// Make sure its the right chip and its connected properly...
	ASSURE(read(SX1276_REG_VERSION) == 0x12);

	gpio_put(cs, 1);

	// Sleep and then set into LoRa mode
	write(SX1276_REG_OPMODE, 0b00001000);
	sleep_ms(10);
	write(SX1276_REG_OPMODE, 0b00001000 | SX1276_OPMODE_MASK_LORAMODE);
	setMode(SX1276_MODE_STDBY);

	// Set any neccesary registers to work properly
	configure();

	// Set frequency to 915mhz
	ASSURE(setFreq(915.0));

	// Set to the highest power setting available (20dBm with power amp)
	ASSURE(setPower(20, true));

	// Set bandwidth to 125kHz, the usual LoRa bandwidth 
	// Other options are 500, 250, 62.5, etc.
	ASSURE(setBandwidth(SX1276_BANDWIDTH_125KHZ));

	// Set spreading factor to 12 (4096 chirps per bit) for best decoding.
	ASSURE(setSpreadingFactor(7));

	// Set coding rate denominator to 5
	ASSURE(setCodingRate(5));

	setPreambleLen(8);

	// Set header mode to explicit
	setHeaderMode(false);

	// Enable CRC
	setCrcMode(true);

	// Syncword of 0x18
	setSyncWord(0x18);

	// Max gain
	setGain(SX1276_GAIN_MAX);

	// Set DIO0 to interrupt on RX done
	ASSURE(configDIO(0, SX1276_DIO0_RX_DONE));

	// Set overcurrent protection to 120mA
	setOCP(true, 15);

	state = RFM97_RadioState::STANDBY;
	return true;
}

void RFM97_LoRa::setISRA(gpio_irq_callback_t func) {
	gpio_set_irq_callback(func);
	gpio_set_irq_enabled(dio0, GPIO_IRQ_EDGE_RISE, true);
	gpio_set_irq_enabled(dio3, GPIO_IRQ_EDGE_RISE, true);
	// gpio_set_irq_enabled_with_callback(dio0, GPIO_IRQ_EDGE_RISE, true, func);
	irq_set_enabled(IO_IRQ_BANK0, true);
}
